--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -59,3 +59,12 @@ p {
   }
 }*/
 
+.wysiLink {
+  /*display: none;*/
+  position: absolute;
+  right: 30%;
+  top:30%;
+  background: white;
+  box-shadow: 0 0 5px 5px #eee;
+  padding: 10px;
+}
