--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,13 @@
     <%end%>
 
     <div class='pure-u-4-5'>
-      <div class='placeholder'></div>
+      <div class='placeholder'>
+        <% unless !notice %>
+        <div class='notices'>
+          <%=notice %>
+        </div>
+        <%end%>
+      </div>
       <div class='container'>
         <%= yield %>
       </div>
