--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -28,7 +28,7 @@
   parserRules: wysihtml5ParserRules, // defined in parser rules set 
   stylesheets: "#{asset_path "wysihtml5-stylesheet.css"}"
   });
-  $(document).on("page:load", function(){
+  $(document).on("page:load || page:change", function(){
     $(".wysiLink").hide();
   })
   $(".linkBtn").on('click', function(){
