--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,8 +1,9 @@
 .pure-g-r
   .pure-u-3-5.card
-    = image_tag @user.gravatar_url, class: "profileImg"
     %h3 Edit your profle below.
     .pure-g-r
       =render "form"
       .pure-u-1-5.gravInfo
+        = image_tag @user.gravatar_url, class: "profileImg edit"
         %p want to change your profile picture? sign up for an account at <a href="http://gravatar.com">gravatar.com</a>
+      =render "social"
