small fix for social networks display.

--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -7,9 +7,7 @@
 
 .pure-button-admin{
   padding: 3px !important;
-/*  right: 5%;
-  position: absolute;
-*/}
+}
 
 .pure-button.pure-green {
   background: #097600;
