--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,7 +2,6 @@
   .pure-u-1.card
     = image_tag @user.gravatar_url, class: "profileImg"
     %h2=@user.name
-
     .pure-g-r
       .pure-u-1
         %h4 Contact Info
@@ -16,16 +15,17 @@
         -if @user.socialnet
           .socialNets
             %h4 Social Networks
-            -if @user.socialnet.twitter
+            -unless @user.socialnet.twitter.empty?
               %a{class:"icon-social-twitter", href:"http://twitter.com/#{@user.socialnet.twitter}"}
-            -if @user.socialnet.facebook
+            -unless @user.socialnet.facebook.empty?
               %a{class:"icon-social-facebook", href:"https://#{@user.socialnet.facebook}"}
-            -if @user.socialnet.gplus
+            -unless @user.socialnet.gplus.empty?
               %a{class:"icon-social-googleplus", href:"https://#{@user.socialnet.gplus}"}
-            -if @user.socialnet.github
+            -unless @user.socialnet.github.empty?
               %a{class:"icon-social-github", href:"https://github.com/#{@user.socialnet.github}"}
-            -if @user.socialnet.linkedin
+            -unless @user.socialnet.linkedin.empty?
               %a{class:"icon-social-linkedin", href:"#{@user.socialnet.linkedin}"}
+          %br
       .pure-u-1-2
         %i{class:"icon-location"}
         #address
